CMake: Only handle strings at start of line

Allow comments at the start of line only (or after only space characters) in
CMakeCache.txt-style lines.

Task-number: QTCREATORBUG-18385
Change-Id: I8b69144ea4f6a667ae1df382c8c4c1e88eca799b
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>